--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Every child has a dream, which he holds onto firmly in the palm of his arms. A dream, like a ball of light which guides, opening doors and spreading hope. For a young boy who grew up in a small town in some corner of the world, he also had such a dream. For him, his imagination was his companion for long. "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Sans&display=swap" rel="stylesheet">
     <!-- ========================================= -->
-    <title>React App</title>
+    <title>Hand Written Chronicles</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
