--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+
+      <div style="text-align: center; height: 100vh; display: flex; justify-content: center; align-items: center;">
+        <img src="./loader.gif" />
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
