--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Noto+Sans&display=swap" rel="stylesheet">
     <!-- ========================================= -->
     <title>Hand Written Chronicles</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PLTEN759C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8PLTEN759C');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
